--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ excerpt_separator: "\n\n"
 detach:  false
 port:    4000
 host:    127.0.0.1
-baseurl: "https://easyjo.com/" # does not include hostname
+#baseurl: "https://easyjo.com/" # does not include hostname
 
 # Outputting
 permalink:     date
@@ -71,4 +71,4 @@ kramdown:
     coderay_css:               style
 
 
-include: ['_pages']
+include: ['_pages', '_articles']
